# engischool-nsu-oop-2022

./: README.md
l.barayshchuk-lab1.2/Rational/Rational/: Rational.cpp  Rational.h  main.cpp
l.barayshchuk-lab2.1/Matrix/: CMakeLists.txt
l.barayshchuk-lab2.1/Matrix/Matrix/: CMakeLists.txt  Main.cpp  Matrix.h
